--- a/app/http/web/app/package.json
+++ b/app/http/web/app/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@okta/configuration-validation": "^1.0.0",
+    "@okta/okta-auth-js": "^4.0.0",
     "@okta/okta-react": "1.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
     "start": "PORT=8080 react-scripts start",
